fixed simulation area problem and tests, created basic robot test implementation